--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 redis==5.2.1
 six==1.17.0
 sqlparse==0.5.3
