--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - postgres
       - redis
       - elasticsearch
+    env_file:
+      - ./backend/.env
 
   frontend:
     build: ./frontend
