--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   backend:
     build: ./backend
@@ -33,6 +31,8 @@ services:
       POSTGRES_DB: jobseeker_db
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:7-alpine
@@ -46,3 +46,6 @@ services:
       - xpack.security.enabled=false
     ports:
       - "9200:9200"
+
+volumes:
+  postgres_data:
