--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+coverage==7.8.2
 Django==5.1.7
 django-cors-headers==4.7.0
 django-elasticsearch-dsl==8.0
@@ -16,17 +17,24 @@ djangorestframework_simplejwt==5.5.0
 elastic-transport==8.17.1
 elasticsearch==8.17.2
 elasticsearch-dsl==8.17.1
+exceptiongroup==1.3.0
 gunicorn==23.0.0
+iniconfig==2.1.0
 kombu==5.5.0
 packaging==24.2
+pluggy==1.6.0
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
+Pygments==2.19.1
 PyJWT==2.9.0
+pytest==8.4.0
+pytest-cov==6.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 redis==5.2.1
 six==1.17.0
 sqlparse==0.5.3
+tomli==2.2.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
